--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.0.0
   lottie: ^3.2.0
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
